refactor: split device, push delivery, localized broadcast, and new-gym services
NotificationServiceImpl becomes a thin facade; each concern has its own class.

Co-authored-by: Cursor <cursoragent@cursor.com>